dashboard/kuboard/kuboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuboard
  namespace: kuboard
  labels:
    app: kuboard
spec:
  ingressClassName: nginx
  rules:
  - host: kuboard.github.icu
    http:
      paths:
      - backend:
          service:
            name: kuboard
            port:
              number: 8500
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kuboard.github.icu
    secretName: github-tls
